# telegram-reminder

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  TZ_bot_tracker.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: README  env.py
alembic/versions/: 44a7a5ae9877_add_week_and_task.py  (+9 more)
app/: config.py  instance_config.py  main.py  scheduler.py
deploy/: bot-tracker.service
docs/: DEPLOY.md  SETUP_INSTANCE.md
plan/: CONVENTIONS.md  PROGRESS.md  README.md  _MConverter.eu_Дополнение_к_ТЗ_v2.md  _MConverter.eu_Промпт_Онбординг_Опросник_JTBD.md  stage-0-skeleton.md  stage-1-onboarding.md  stage-2-manual-tasks.md  stage-3-checkin.md  stage-4-llm-extraction.md  stage-5-decompose-voice.md  stage-6-summary-sheets.md  stage-6b-member-join.md  stage-7-stats-deploy.md  stage-8-profile.md
scripts/: TODO.md  backup_db.sh  deploy.sh  deploy_lib.sh  rebuild.sh  restart.sh  restore_db.sh  seed_member.py  setup_direct.sh  setup_whisper_local.sh
tests/: test_auto_extraction_report.py  test_checkin_callback.py  test_decompose_manual.py  test_decompose_repo.py  test_dialog_context_facilitator.py  test_extraction.py  test_extraction_filter.py  test_group_facilitator.py  test_group_goals_view.py  test_instance_config.py  test_llm_fallback.py  test_membership.py  test_onboarding_flow.py  test_plaud.py  test_plaud_action_plan.py  test_profile_onboarding.py  test_scheduler_weekday.py  test_settings_contacts.py  test_sheet_sync.py  test_sheets_progress.py  test_stats.py  test_summary.py  test_tracking.py  test_voice.py
(+51 files in other folders)
